# solutions

./: .gitignore  HostingOcean.code-workspace  docker-compose.dev.yml  docker-compose.yml
agents/: agents-overview.md
agents/chatbot-agent/: system.md
agents/code-agent/: system.md
agents/devops-agent/: system.md
agents/docs-agent/: system.md
agents/research-agent/: system.md
agents/support-agent/: system.md
backend/: .env.example  .gitignore  Dockerfile  package.json
backend/src/: app.js  index.js
clients/python-sdk/: .gitignore  pyproject.toml
clients/python-sdk/src/hostingocean/: __init__.py  client.py  exceptions.py
clients/python-sdk/tests/: __init__.py  test_client.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  vite.config.js
tools/: add-dns-record.sh  add-listener.sh  add-ssl-vhost.sh  antivirus-setup.sh  append-header-css.sh  auto-updates.sh  build-sites.sh  check-descriptions.php  check-dns-records.sh  check-listener.sh  check-my-domain.sh  check-pdns.sh  check-tables.sh  check-template.sh  check-whmcs-db.sh  checkstate.sh  create-my-subdomain.sh  create-websites.sh  create-whmcs-db.py  create-whmcs-domain.sh  csf-setup.sh  custom.css  dbreset.sh  describe-child.sh  enable-modsec.sh  fail2ban-setup.sh  fix-dns-disabled.sh  fix-header.py  fix_menumanager.php  fixgrants.sh  fullclean.sh  go-register.php  ho-currency-hook.php  insert-whmcs.sh  insert-whmcs2.sh  install-tools.sh  iptables-setup.sh  issue-whmcs-ssl.sh  modsec-setup.sh  ols-tune.sh  (+24 more)
(+389 files in other folders)
